@@ -1,25 +1,29 @@
-import org.junit.platform.launcher.core.LauncherDiscoveryRequestBuilder;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 import org.junit.platform.launcher.Launcher;
-import org.junit.platform.launcher.listeners.SummaryGeneratingListener;
 import org.junit.platform.launcher.LauncherDiscoveryRequest;
+import org.junit.platform.launcher.core.LauncherDiscoveryRequestBuilder;
 import org.junit.platform.launcher.core.LauncherFactory;
+import org.junit.platform.launcher.listeners.SummaryGeneratingListener;
+import org.junit.platform.launcher.listeners.TestExecutionSummary;
+
+import java.io.PrintWriter;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClass;
 
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Timeout;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.platform.launcher.listeners.TestExecutionSummary;
-
-import java.io.PrintWriter;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
-
 
 @Timeout(10)
 class UnitTestRunner {
+
+    private static SocialNetwork networkMd;
+    private static SocialNetwork networkLg;
+    private static SocialNetwork networkEmpty;
+
+
     public static void main(String[] argv) {
         LauncherDiscoveryRequest request = LauncherDiscoveryRequestBuilder.request()
         .selectors(selectClass(UnitTestRunner.class))
@@ -60,275 +64,228 @@ class UnitTestRunner {
         return finalString;
     }
 
+    @BeforeAll
+    public static void setUpClass() throws Exception {
+        networkMd = new SocialNetwork("src/main/java/social-network-md.json");
+        networkLg = new SocialNetwork("src/main/java/social-network-lg.json");
+        networkEmpty = new SocialNetwork("src/main/java/social-network-empty.json");
+    }
 
     @Test
-    @DisplayName("25")
-    void empty() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-empty.json");
-        System.out.println(s.averageFriendsPerPerson());
-        System.out.println(s.socialButterfly());
-        System.out.println(s.influencer());
-        System.out.println(s.sixDegreesOfSeparation());
+    @DisplayName("4")
+    public final void test00_averageFriendsPerPersonMd() {
+        assertEquals(3, networkMd.averageFriendsPerPerson());
+    }
 
-        System.out.println(s.mutualFriends("Alisha", "Nate"));
-        System.out.println(s.haveSeenMeme("Carol", 2));
-        System.out.println(s.youMayKnow("Carol"));
-        System.out.println(s.socialLadder("Alisha", "Stanley"));
-        //System.out.println(s.glue());
-
-
-        Set<String> expectedMutual = Set.of();
-        Set<String> expectedSeen = Set.of();
-        Set<String> expectedKnow = Set.of();
-        List<String> expectedLadder = Arrays.asList();
-
-        // System.out.println(s.glue(expectedKnow));
-        assertTrue(expectedSeen.equals(s.haveSeenMeme("Carol", 2)));
-        assertTrue(expectedKnow.equals(s.youMayKnow("Carol")));
-        assertTrue(expectedMutual.equals(s.mutualFriends("Alisha", "Nate")));
-        assertTrue(expectedLadder.equals(s.socialLadder("Alisha", "Stanley")));
-        assertEquals("", s.glue(expectedKnow));
-
-        assertEquals(0, s.averageFriendsPerPerson());
-        assertEquals("", s.socialButterfly());
-        assertEquals("", s.influencer());
-        assertTrue(s.sixDegreesOfSeparation());
-
+    @Test
+    @DisplayName("4")
+    public final void test01_averageFriendsPerPersonLg() {
+        assertEquals(3, networkLg.averageFriendsPerPerson());
 
     }
 
     @Test
-    @DisplayName("5")
-    void lg_mutual() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-
-        Set<String> expectedMutual = Set.of("Larry");
-
-        assertTrue(expectedMutual.equals(s.mutualFriends("Alisha", "Nate")));
+    @DisplayName("4")
+    public final void test02_averageFriendsPerPersonEdge() {
+        assertEquals(0, networkEmpty.averageFriendsPerPerson());
     }
 
     @Test
-    @DisplayName("5")
-    void lg_ladder() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-
-        List<String> expectedLadder = Arrays.asList("Alisha", "Larry", "Nate", "Aria", "Stanley");
-
-        assertTrue(expectedLadder.equals(s.socialLadder("Alisha", "Stanley")));
+    @DisplayName("4")
+    public final void test03_mutualFriendsMd() {
+        String expectedArr[] = {"Alex", "Bailey"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkMd.mutualFriends("Edward", "Addison"));
     }
 
     @Test
-    @DisplayName("5")
-    void lg_glue() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        Set<String> expectedKnow = Set.of("Thomas", "Alisha", "Samuel", "Kendra", "Aria", "Cameron");
-
-        assertEquals("Nate", s.glue(expectedKnow));
+    @DisplayName("4")
+    public final void test04_mutualFriendsLg() {
+        String expectedArr[] = {"Cole", "Gabby"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkLg.mutualFriends("Ben", "Avery"));
     }
 
     @Test
-    @DisplayName("5")
-    void lg_average() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        assertEquals(3, s.averageFriendsPerPerson());
+    @DisplayName("4")
+    public final void test05_mutualFriendsEdge() {
+        assertEquals(new HashSet<>(), networkLg.mutualFriends("SomePerson", "SomeOtherPerson"));
     }
 
     @Test
-    @DisplayName("5")
-    void lg_butterfly() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        assertEquals("Alisha", s.socialButterfly());
+    @DisplayName("4")
+    public final void test06_socialButterflyMd() {
+        assertEquals("Addison", networkMd.socialButterfly());
     }
 
     @Test
-    @DisplayName("5")
-    void lg_influencer() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        assertEquals("Margot", s.influencer());
+    @DisplayName("4")
+    public final void test07_socialButterflyLg() {
+        assertEquals("Alisha", networkLg.socialButterfly());
     }
 
     @Test
-    @DisplayName("5")
-    void lg_sixDegrees() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        assertFalse(s.sixDegreesOfSeparation());
+    @DisplayName("4")
+    public final void test08_socialButterflyEdge() {
+        assertEquals("", networkEmpty.socialButterfly());
     }
 
     @Test
-    @DisplayName("5")
-    void lg_haveSeenMeme() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-        Set<String> expectedSeen = Set.of("Nate", "Larry", "Carol");
-
-        assertTrue(expectedSeen.equals(s.haveSeenMeme("Carol", 2)));
+    @DisplayName("4")
+    public final void test09_influencerMd() {
+        assertEquals("Alex", networkMd.influencer());
     }
 
     @Test
-    @DisplayName("5")
-    void lg_youMayKnow() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-lg.json");
-
-
-        Set<String> expectedKnow = Set.of("Thomas", "Alisha", "Samuel", "Kendra", "Aria", "Cameron");
-
-        assertTrue(expectedKnow.equals(s.youMayKnow("Carol")));
-    }
-
-
-    @Test
-    @DisplayName("5")
-    void md_youMayKnow() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-
-        Set<String> expectedKnow = Set.of("Mel", "Riley");
-
-        assertTrue(expectedKnow.equals(s.youMayKnow("Bailey")));
-
-    }
-    @Test
-    @DisplayName("5")
-    void md_Ladder() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-        List<String> expectedLadder = Arrays.asList("Edward", "Alex", "Jess", "Riley", "Daniel");
-
-        assertTrue(expectedLadder.equals(s.socialLadder("Edward", "Daniel")));
-
-    }
-    @Test
-    @DisplayName("5")
-    void md_glue() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-
-        Set<String> expectedSeen = Set.of("Alex", "Addison", "Jess", "Edward", "Bailey");
-
-        assertEquals("", s.glue(expectedSeen));
-
+    @DisplayName("4")
+    public final void test10_influencerLg() {
+        assertEquals("Margot", networkLg.influencer());
     }
 
     @Test
-    @DisplayName("5")
-    void md_average() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-        assertEquals(3, s.averageFriendsPerPerson());
+    @DisplayName("4")
+    public final void test11_influencerEdge() {
+        assertEquals("", networkEmpty.influencer());
     }
 
     @Test
-    @DisplayName("5")
-    void md_Bufferfly() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-
-        assertEquals("Addison", s.socialButterfly());
-    }
-    @Test
-    @DisplayName("5")
-    void md_influencer() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-        assertEquals("Alex", s.influencer());
-    }
-    @Test
-    @DisplayName("5")
-    void md_sixDegree() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-
-        assertTrue(s.sixDegreesOfSeparation());
+    @DisplayName("4")
+    public final void test12_haveSeenMemeMd() {
+        String expectedArr[] = {"Alex", "Addison", "Bailey", "Daniel", "Edward", "Jess", "Riley"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkMd.haveSeenMeme("Jess", 3));
     }
 
     @Test
-    @DisplayName("5")
-    void md_mutualFriends() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-        Set<String> expectedMutual = Set.of("Alex", "Bailey");
-
-        assertTrue(expectedMutual.equals(s.mutualFriends("Edward", "Jess")));
+    @DisplayName("4")
+    public final void test13_haveSeenMemeLg() {
+        String expectedArr[] = {"Alexis", "Alisha", "Avery", "Ben", "Carly", "Cole", "Cory", "Dana", "Drew",
+                "Esther", "Gabby", "Jennifer", "Kerry", "Larry", "Lillian", "Margot", "Mark", "Megan", "Nate",
+                "Samuel", "Will", "Xavier"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkLg.haveSeenMeme("Margot", 3));
     }
 
     @Test
-    @DisplayName("5")
-    void md_haveSeenMeme() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-md.json");
-
-        Set<String> expectedSeen = Set.of("Alex", "Addison", "Jess", "Edward", "Bailey");
-
-        assertTrue(expectedSeen.equals(s.haveSeenMeme("Bailey", 2)));
+    @DisplayName("4")
+    public final void test14_haveSeenMemeEdge() {
+        assertEquals(new HashSet<String>(), networkEmpty.haveSeenMeme("Margot", -3));
     }
 
+    @Test
+    @DisplayName("4")
+    public final void test15_youMayKnowMd() {
+        String expectedArr[] = {"Mel", "Riley"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkMd.youMayKnow("Alex"));
+    }
 
     @Test
-    @DisplayName("5")
-    void sm_youMayKnow() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
+    @DisplayName("4")
+    public final void test16_youMayKnowLg() {
+        String expectedArr[] = {"Avery", "Cole", "Gabby", "Margot", "Will"};
+        Set<String> expectedSet = new HashSet<>(Arrays.asList(expectedArr));
+        assertEquals(expectedSet, networkLg.youMayKnow("Lillian"));
+    }
 
-        Set<String> expectedKnow = Set.of("Aaron");
+    @Test
+    @DisplayName("4")
+    public final void test17_youMayKnowEdge() {
+        assertEquals(new HashSet<String>(), networkEmpty.youMayKnow("SomePerson"));
+    }
 
-        assertTrue(expectedKnow.equals(s.youMayKnow("Scott")));
+    @Test
+    @DisplayName("4")
+    public final void test18_isFriendGroupMd() {
+        String arr[] = {"Addison", "Alex", "Bailey", "Jess"};
+        Set<String> set = new HashSet<>(Arrays.asList(arr));
+        assertEquals(false, networkMd.isFriendGroup(set));
+    }
+
+    @Test
+    @DisplayName("4")
+    public final void test19_isFriendGroupLg() {
+        String arr[] = {"Alexis", "Carly", "Cory", "Drew", "Megan"};
+        Set<String> set = new HashSet<>(Arrays.asList(arr));
+        assertEquals(true, networkLg.isFriendGroup(set));
 
     }
 
     @Test
-    @DisplayName("5")
-    void sm_socialLadder() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
-        Set<String> expectedKnow = Set.of("Aaron");
+    @DisplayName("4")
+    public final void test20_isFriendGroupEdge() {
+            String arr[] = {"Cory"};
+            Set<String> set = new HashSet<>(Arrays.asList(arr));
+            assertEquals(false, networkLg.isFriendGroup(set));
+    }
 
-        assertTrue(expectedKnow.equals(s.youMayKnow("Scott")));
+    @Test
+    @DisplayName("4")
+    public final void test21_sixDegreesOfSeparationMd() {
+            assertEquals(true, networkMd.sixDegreesOfSeparation());
+    }
+
+    @Test
+    @DisplayName("4")
+    public final void test22_sixDegreesOfSeparationLg() {
+            assertEquals(false, networkLg.sixDegreesOfSeparation());
 
     }
 
     @Test
-    @DisplayName("5")
-    void sm_glue() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
-
-        Set<String> expectedSeen = Set.of("Malika", "Lilly", "Scott");
-
-        assertEquals("Scott", s.glue(expectedSeen));
+    @DisplayName("4")
+    public final void test23_sixDegreesOfSeparationEdge() {
+            assertEquals(true, networkEmpty.sixDegreesOfSeparation());
 
     }
 
     @Test
-    @DisplayName("5")
-    void sm_average() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
+    @DisplayName("4")
+    public final void test24_socialLadderMd() {
+        String expectedArr[] = {"Edward", "Alex", "Jess", "Riley"};
+        List<String> expectedList = new ArrayList<String>(Arrays.asList(expectedArr));
+        assertEquals(expectedList, networkMd.socialLadder("Edward", "Riley"));
 
-        assertEquals(2, s.averageFriendsPerPerson());
     }
 
     @Test
-    @DisplayName("5")
-    void sm_bufferfly() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
-
-        assertEquals("Lilly", s.socialButterfly());
+    @DisplayName("4")
+    public final void test25_socialLadderLg() {
+        String expectedArr[] = {"Kerry", "Alisha", "Margot", "Ben"};
+        List<String> expectedList = new ArrayList<String>(Arrays.asList(expectedArr));
+        assertEquals(expectedList, networkLg.socialLadder("Kerry", "Ben"));
     }
 
     @Test
-    @DisplayName("5")
-    void sm_influencer() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
-
-        assertEquals("Lilly", s.influencer());
+    @DisplayName("4")
+    public final void test26_socialLadderEdge() {
+        assertEquals(new ArrayList<String>(), networkLg.socialLadder(null, null));
     }
+
     @Test
-    @DisplayName("5")
-    void sm_sixDegrees() {
-        SocialNetwork s = new SocialNetwork("src/main/java/social-network-sm.json");
+    @DisplayName("4")
+    public final void test27_glueMd() {
+        String arr[] = {"Alex", "Bailey", "Jess", "Riley"};
+        Set<String> set = new HashSet<>(Arrays.asList(arr));
+        assertEquals("Jess", networkMd.glue(set));
 
-        assertTrue(s.sixDegreesOfSeparation());
     }
+
+    @Test
+    @DisplayName("4")
+    public final void test28_glueLg() {
+        String arr[] = {"Alisha", "Ashley", "Esther", "Gabe", "Jennifer", "Larry", "Margot", "Mason"};
+        Set<String> set = new HashSet<>(Arrays.asList(arr));
+        assertEquals("Alisha", networkLg.glue(set));
+    }
+
+    @Test
+    @DisplayName("4")
+    public final void test29_glueEdge() {
+        String arr[] = {"Avery", "Cole", "Gabby", "Jill"};
+        Set<String> set = new HashSet<>(Arrays.asList(arr));
+        assertEquals("", networkLg.glue(set));
+    }
+
+
 }
